# src/controllers/projectController.js
@@ -1,7 +1,8 @@
 module.exports = function $projectController(expressify, projectService, walletService) {
   return expressify({
     create,
-    get
+    get,
+    getAll
   });
 
   /**
@@ -14,8 +15,8 @@ module.exports = function $projectController(expressify, projectService, walletS
     const tx = await projectService.create(
       walletService.getDeployerWallet(),
       req.body.stagesCost,
-      walletService.getWalletData(req.body.ownerId).address,
-      walletService.getWalletData(req.body.reviewerId).address
+      (await walletService.getWalletData(req.body.ownerId)).address,
+      (await walletService.getWalletData(req.body.reviewerId)).address
     );
     console.log('[LOG] projectService returned tx: ', tx);
     return res.status(200).json(tx);
@@ -27,7 +28,17 @@ module.exports = function $projectController(expressify, projectService, walletS
    * @returns {Promise}
    */
   async function get(req, res) {
-    const projectInfo = await projectService.getProject(req.params.projectId);
+    const projectInfo = await projectService.get(req.params.projectId);
     return res.status(200).json(projectInfo);
+  }
+
+  /**
+   * Gets all projects
+   *
+   * @returns
+   */
+  async function getAll(req, res) {
+    const projectsList = await projectService.getAll();
+    return res.status(200).json(projectsList);
   }
 };
